[package]
name = "zebra-script"
version = "1.0.0-beta.35"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
description = "Zebra script verification wrapping zcashd's zcash_script library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

readme = "../README.md"
homepage = "https://zfnd.org/zebra/"
# crates.io is limited to 5 keywords and categories
keywords = ["zebra", "zcash"]
# Must be one of <https://crates.io/category_slugs>
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
zcash_script = "0.1.14"

zebra-chain = { path = "../zebra-chain", version = "1.0.0-beta.35" }

thiserror = "1.0.57"
displaydoc = "0.2.4"

[dev-dependencies]
hex = "0.4.3"
lazy_static = "1.4.0"
zebra-test = { path = "../zebra-test", version = "1.0.0-beta.35" }
