[package]
name = "zebra-script"
version = "2.0.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
description = "Zebra script verification wrapping zcashd's zcash_script library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

readme = "../README.md"
homepage = "https://zfnd.org/zebra/"
# crates.io is limited to 5 keywords and categories
keywords = ["zebra", "zcash"]
# Must be one of <https://crates.io/category_slugs>
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[features]
default = []
# Enable a C++/Rust comparison interpreter that runs both the original C++
# implementation and the Rust implementation, and logs a warning if they don't
# match.
comparison-interpreter = []

[dependencies]
libzcash_script = { workspace = true }
zcash_script = { workspace = true }
zcash_primitives = { workspace = true }
zebra-chain = { path = "../zebra-chain", version = "2.0.0" }

thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
lazy_static = { workspace = true }
zebra-test = { path = "../zebra-test", version = "1.0.1" }

[lints]
workspace = true
