[package]
name = "zebra-script"
version = "3.0.2"
authors.workspace = true
description = "Zebra script verification wrapping zcashd's zcash_script library"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "../README.md"
homepage.workspace = true
# crates.io is limited to 5 keywords and categories
keywords.workspace = true
# Must be one of <https://crates.io/category_slugs>
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[features]
default = []
# Enable a C++/Rust comparison interpreter that runs both the original C++
# implementation and the Rust implementation, and logs a warning if they don't
# match.
comparison-interpreter = []

[dependencies]
libzcash_script = { workspace = true }
zcash_script = { workspace = true }
zcash_primitives = { workspace = true }
zebra-chain = { path = "../zebra-chain", version = "4.0.0" }

thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
lazy_static = { workspace = true }
zebra-test = { path = "../zebra-test", version = "2.0.1" }

[lints]
workspace = true
