[package]
name = "zebra-state"
version = "4.0.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
description = "State contextual verification and storage code for Zebra"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

readme = "../README.md"
homepage = "https://zfnd.org/zebra/"
# crates.io is limited to 5 keywords and categories
keywords = ["zebra", "zcash"]
# Must be one of <https://crates.io/category_slugs>
categories = ["asynchronous", "caching", "cryptography::cryptocurrencies"]

[features]

# Production features that activate extra dependencies, or extra features in dependencies

progress-bar = [
    "howudoin",
]

# Indexes spending transaction ids by spent outpoints and revealed nullifiers
indexer = []

# Test-only features
proptest-impl = [
    "proptest",
    "proptest-derive",
    "zebra-test",
    "zebra-chain/proptest-impl"
]

# Experimental elasticsearch support
elasticsearch = [
    "dep:elasticsearch",
    "dep:serde_json",
    "zebra-chain/elasticsearch",
]

tx_v6 = ["zebra-chain/tx_v6"]

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true, features = ["clock", "std"] }
dirs = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
humantime-serde = { workspace = true }
human_bytes = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
metrics = { workspace = true }
mset = { workspace = true }
regex = { workspace = true }
rlimit = { workspace = true }
rocksdb = { workspace = true, features = ["lz4"] }
semver = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
tempfile = { workspace = true }
thiserror = { workspace = true }

rayon = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "tracing", "macros", "time"] }
tower = { workspace = true, features = ["buffer", "util"] }
tracing = { workspace = true }

sapling-crypto = { workspace = true }

# elasticsearch specific dependencies.
# Security: avoid default dependency on openssl
elasticsearch = { workspace = true, features = ["rustls-tls"], optional = true }
serde_json = { workspace = true, optional = true }

zebra-node-services = { path = "../zebra-node-services", version = "3.0.0" }
zebra-chain = { path = "../zebra-chain", version = "5.0.0", features = ["async-error"] }

# prod feature progress-bar
howudoin = { workspace = true, optional = true }

# test feature proptest-impl
zebra-test = { path = "../zebra-test/", version = "2.0.1", optional = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
derive-getters.workspace = true
derive-new.workspace = true

[dev-dependencies]
color-eyre = { workspace = true }

once_cell = { workspace = true }
spandoc = { workspace = true }

hex = { workspace = true, features = ["serde"] }
insta = { workspace = true, features = ["ron", "redactions"] }

proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = { workspace = true }

halo2 = { package = "halo2_proofs", version = "0.3" }
jubjub = { workspace = true }

tokio = { workspace = true, features = ["full", "tracing", "test-util"] }

zebra-chain = { path = "../zebra-chain", version = "5.0.0", features = ["proptest-impl"] }
zebra-test = { path = "../zebra-test/", version = "2.0.1" }

[lints]
workspace = true
