[package]
name = "zebra-test"
version = "1.0.0-beta.41"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
description = "Test harnesses and test vectors for Zebra"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

readme = "../README.md"
homepage = "https://zfnd.org/zebra/"
# crates.io is limited to 5 keywords and categories
keywords = ["zebra", "zcash"]
# Must be one of <https://crates.io/category_slugs>
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[features]
default = []

# Support for transaction version 6
tx_v6 = []

[dependencies]
hex = "0.4.3"
indexmap = "2.6.0"
lazy_static = "1.4.0"
insta = "1.40.0"
itertools = "0.13.0"
proptest = "1.4.0"
once_cell = "1.20.2"
rand = "0.8.5"
regex = "1.11.0"

tokio = { version = "1.41.0", features = ["full", "tracing", "test-util"] }
tower = { version = "0.4.13", features = ["util"] }
futures = "0.3.31"

color-eyre = "0.6.3"
# This is a transitive dependency via color-eyre.
# Enable a feature that makes tinyvec compile much faster.
tinyvec = { version = "1.8.0", features = ["rustc_1_55"] }

humantime = "2.1.0"
owo-colors = "4.1.0"
spandoc = "0.2.2"
thiserror = "1.0.64"

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2.0"
tracing = "0.1.39"

[dev-dependencies]
tempfile = "3.13.0"
