[package]
name = "zebra-test"
version = "2.0.1"
authors.workspace = true
description = "Test harnesses and test vectors for Zebra"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "../README.md"
homepage.workspace = true
# crates.io is limited to 5 keywords and categories
keywords.workspace = true
# Must be one of <https://crates.io/category_slugs>
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[dependencies]
hex = { workspace = true }
indexmap = { workspace = true }
lazy_static = { workspace = true }
insta = { workspace = true }
itertools = { workspace = true }
proptest = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }

tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tower = { workspace = true, features = ["util"] }
futures = { workspace = true }

color-eyre = { workspace = true }

humantime = { workspace = true }
owo-colors = { workspace = true }
spandoc = { workspace = true }
thiserror = { workspace = true }

tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-error = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
tx_v6 = []

[lints]
workspace = true
