[package]
name = "zebra-utils"
version = "1.0.0-beta.42"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
description = "Developer tools for Zebra maintenance and testing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

# zebra-utils has a separate README file
readme = "README.md"
homepage = "https://zfnd.org/zebra/"
# crates.io is limited to 5 keywords and categories
keywords = ["zebra", "zcash"]
# Must be one of <https://crates.io/category_slugs>
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

# Zebra is only supported on the latest stable Rust version. See the README for details.
# Any Zebra release can break compatibility with older Rust versions.
rust-version = "1.73"

[[bin]]
name = "zebra-checkpoints"
# this setting is required for Zebra's Docker build caches
path = "src/bin/zebra-checkpoints/main.rs"
required-features = ["zebra-checkpoints"]

[[bin]]
name = "search-issue-refs"
path = "src/bin/search-issue-refs/main.rs"
required-features = ["search-issue-refs"]

[[bin]]
name = "block-template-to-proposal"
# this setting is required for Zebra's Docker build caches
path = "src/bin/block-template-to-proposal/main.rs"
required-features = ["getblocktemplate-rpcs"]

[[bin]]
name = "openapi-generator"
path = "src/bin/openapi-generator/main.rs"
required-features = ["openapi-generator"]

[features]
default = []

# Each binary has a feature that activates the extra dependencies it needs

zebra-checkpoints = [
    "itertools",
    "tokio",
    "zebra-chain/json-conversion",
    "zebra-node-services/rpc-client"
]

search-issue-refs = [
    "regex",
    "reqwest",
    "tokio"
]

# block-template-to-proposal uses the experimental mining RPC support feature name
getblocktemplate-rpcs = [
    "zebra-rpc/getblocktemplate-rpcs",
    "zebra-node-services/getblocktemplate-rpcs",
    "zebra-chain/getblocktemplate-rpcs",
]

shielded-scan = [
    "itertools",
    "jsonrpc",
    "zcash_primitives",
    "zcash_client_backend",
]

openapi-generator = [
    "zebra-rpc",
    "syn",
    "quote",
    "serde_yml",
    "serde"
]

[dependencies]
color-eyre = "0.6.3"
# This is a transitive dependency via color-eyre.
# Enable a feature that makes tinyvec compile much faster.
tinyvec = { version = "1.8.0", features = ["rustc_1_55"] }

structopt = "0.3.26"
hex = "0.4.3"
serde_json = "1.0.133"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.18"
thiserror = "2.0.3"

zebra-node-services = { path = "../zebra-node-services", version = "1.0.0-beta.42" }
zebra-chain = { path = "../zebra-chain", version = "1.0.0-beta.42" }

# These crates are needed for the block-template-to-proposal binary
zebra-rpc = { path = "../zebra-rpc", version = "1.0.0-beta.42", optional = true }

# These crates are needed for the zebra-checkpoints binary
itertools = { version = "0.13.0", optional = true }

# These crates are needed for the search-issue-refs binary
regex = { version = "1.11.0", optional = true }
# Avoid default openssl dependency to reduce the dependency tree and security alerts. 
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"], optional = true }

# These crates are needed for the zebra-checkpoints and search-issue-refs binaries
tokio = { version = "1.41.1", features = ["full"], optional = true }

jsonrpc = { version = "0.18.0", optional = true }

zcash_primitives = { workspace = true, optional = true }
zcash_client_backend = { workspace = true, optional = true }
zcash_protocol.workspace = true

# For the openapi generator
rand = "0.8.5"
syn = { version = "2.0.79", features = ["full"], optional = true }
quote = { version = "1.0.37", optional = true }
serde_yml = { version = "0.0.12", optional = true }
serde = { version = "1.0.215", features = ["serde_derive"], optional = true }
indexmap = "2.7.0"

