[package]
name = "zebra-utils"
version = "1.0.0"
authors = ["Zcash Foundation <zebra@zfnd.org>"]
description = "Developer tools for Zebra maintenance and testing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZcashFoundation/zebra"
edition = "2021"

# zebra-utils has a separate README file
readme = "README.md"
homepage = "https://zfnd.org/zebra/"
# crates.io is limited to 5 keywords and categories
keywords = ["zebra", "zcash"]
# Must be one of <https://crates.io/category_slugs>
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

# Zebra is only supported on the latest stable Rust version. See the README for details.
# Any Zebra release can break compatibility with older Rust versions.
rust-version = "1.73"

[[bin]]
name = "zebra-checkpoints"
# this setting is required for Zebra's Docker build caches
path = "src/bin/zebra-checkpoints/main.rs"
required-features = ["zebra-checkpoints"]

[[bin]]
name = "search-issue-refs"
path = "src/bin/search-issue-refs/main.rs"
required-features = ["search-issue-refs"]

[[bin]]
name = "block-template-to-proposal"
# this setting is required for Zebra's Docker build caches
path = "src/bin/block-template-to-proposal/main.rs"

[[bin]]
name = "openapi-generator"
path = "src/bin/openapi-generator/main.rs"
required-features = ["openapi-generator"]

[features]
default = []

# Each binary has a feature that activates the extra dependencies it needs

zebra-checkpoints = [
    "itertools",
    "tokio",
    "zebra-chain/json-conversion",
    "zebra-node-services/rpc-client"
]

search-issue-refs = [
    "regex",
    "reqwest",
    "tokio"
]

shielded-scan = [
    "itertools",
    "jsonrpc",
    "zcash_primitives",
    "zcash_client_backend",
]

openapi-generator = [
    "syn",
    "quote",
    "serde_yml",
    "serde"
]

[dependencies]
color-eyre = { workspace = true }
# This is a transitive dependency via color-eyre.
# Enable a feature that makes tinyvec compile much faster.
tinyvec = { workspace = true, features = ["rustc_1_55"] }

structopt = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

zebra-node-services = { path = "../zebra-node-services", version = "1.0.0" }
zebra-chain = { path = "../zebra-chain", version = "1.0.0" }

# These crates are needed for the block-template-to-proposal binary
zebra-rpc = { path = "../zebra-rpc", version = "1.0.0" }

# These crates are needed for the zebra-checkpoints binary
itertools = { workspace = true, optional = true }

# These crates are needed for the search-issue-refs binary
regex = { workspace = true, optional = true }
# Avoid default openssl dependency to reduce the dependency tree and security alerts. 
reqwest = { workspace = true, features = ["rustls-tls"], optional = true }

# These crates are needed for the zebra-checkpoints and search-issue-refs binaries
tokio = { workspace = true, features = ["full"], optional = true }

jsonrpc = { workspace = true, optional = true }

zcash_primitives = { workspace = true, optional = true }
zcash_client_backend = { workspace = true, optional = true }
zcash_protocol.workspace = true

# For the openapi generator
rand = { workspace = true }
syn = { workspace = true, features = ["full"], optional = true }
quote = { workspace = true, optional = true }
serde_yml = { workspace = true, optional = true }
serde = { workspace = true, features = ["serde_derive"], optional = true }
indexmap = { workspace = true }

