[package]
name = "zebra-utils"
version = "4.0.0"
authors.workspace = true
description = "Developer tools for Zebra maintenance and testing"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# zebra-utils has a separate README file
readme = "README.md"
homepage.workspace = true
# crates.io is limited to 5 keywords and categories
keywords.workspace = true
# Must be one of <https://crates.io/category_slugs>
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[[bin]]
name = "zebra-checkpoints"
# this setting is required for Zebra's Docker build caches
path = "src/bin/zebra-checkpoints/main.rs"
required-features = ["zebra-checkpoints"]

[[bin]]
name = "search-issue-refs"
path = "src/bin/search-issue-refs/main.rs"
required-features = ["search-issue-refs"]

[[bin]]
name = "block-template-to-proposal"
# this setting is required for Zebra's Docker build caches
path = "src/bin/block-template-to-proposal/main.rs"

[features]
default = []

# Each binary has a feature that activates the extra dependencies it needs

zebra-checkpoints = [
    "itertools",
    "tokio",
    "zebra-chain/json-conversion",
    "zebra-node-services/rpc-client"
]

search-issue-refs = [
    "regex",
    "reqwest",
    "tokio"
]

[dependencies]
color-eyre = { workspace = true }

structopt = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

zebra-node-services = { path = "../zebra-node-services", version = "3.0.0" }
zebra-chain = { path = "../zebra-chain", version = "5.0.0" }

# These crates are needed for the block-template-to-proposal binary
zebra-rpc = { path = "../zebra-rpc", version = "5.0.0" }

# These crates are needed for the zebra-checkpoints binary
itertools = { workspace = true, optional = true }

# These crates are needed for the search-issue-refs binary
regex = { workspace = true, optional = true }
# Avoid default openssl dependency to reduce the dependency tree and security alerts.
reqwest = { workspace = true, features = ["rustls-tls"], optional = true }

# These crates are needed for the zebra-checkpoints and search-issue-refs binaries
tokio = { workspace = true, features = ["full"], optional = true }

zcash_primitives = { workspace = true, optional = true }
zcash_protocol.workspace = true

[lints]
workspace = true
